@@ -140,6 +140,10 @@ module Cucumber
       end
     end
 
+    def invoke(step_name, multiline_argument=nil)
+      step_match(step_name).invoke(multiline_argument)
+    end
+
     def step_match(step_name, formatted_step_name=nil) #:nodoc:
       matches = @programming_languages.map do |programming_language| 
         programming_language.step_matches(step_name, formatted_step_name)
