@@ -1,3 +1,8 @@
+== In Git
+
+=== Internal changes
+* Added StepMother#invoke(step_name, multiline_argument=nil) - needed by cuke4duke ticket #26 (Aslak Hellesøy)
+
 == 0.4.0 2009-10-09
 
 The back to stable release. When we went from 0.3.11 to 0.3.90 we thought we were close to a 0.4.0 release. Then the community
